# Thesis

./: .gitignore  Ast.hpp  CMakeLists.txt  Makefile  README.md  README.txt  TextRange.hpp  codegen.cpp  codegen.h  cv_4.tex  genParser.sh  jumperCounts.txt  lex.yy.c  node.h  params.txt  parser.y  premake4.lua  resume.cls  test.txt  tokens.l
DesignDyn/StepperCPU/include/: StepperNewton.hpp  StepperNewtonDyn.hpp
DesignDyn/StepperCPU/src/: StepperNewton.cpp  StepperNewtonDyn.cpp
DesignDyn/femlib/include/: ArrayUtil.hpp  BoundVec3.hpp  ConfigFile.hpp  Element.hpp  ElementHex.hpp  ElementHier.hpp  ElementMesh.hpp  ElementMeshHier.hpp  ElementQuad.hpp  ElementRegGrid.hpp  FileUtil.hpp  MatTable.hpp  MaterialQuad.hpp  MeshMulti.hpp  Quadrature.hpp  Stepper.hpp  StrainCorotLin.hpp  StrainEneNeo.hpp  StrainLin.hpp  femError.hpp  util.h
DesignDyn/femlib/src/: ConfigFile.cpp  EMeshStiffness.cpp  EMeshStiffnessSparse.cpp  ElementHier.cpp  ElementMesh.cpp  ElementMeshHier.cpp  ElementQuad.cpp  ElementRegGrid.cpp  FileUtil.cpp  MatTable.cpp  MaterialQuad.cpp  Quadrature.cpp  StepperGrad.cpp  StrainCorotLin.cpp  StrainLin.cpp  Timer.cpp
DesignDyn/include/pcgsolver/debug/: CMakeCache.txt
DesignDyn/runLinux/: UnitTests.cpp  UnitTests.hpp  config.txt  runtime.cpp
DesignDyn/vecmath/include/: Matrix3f.h  Vector3i.h  vecmath.h
DesignDyn/vecmath/src/: Matrix4f.cpp  Vector3i.cpp
DesignDyn/viewer/include/: Render.hpp  glheader.hpp
DesignDyn/voxelizer/include/: Mesh.hpp  util.h  vec.h
WorkingDocument/: physlang.tex
WorkingDocument/figures/: dropedges.pxm
grammar/: parser.y  tokens.l
include/: Ast.hpp  AstNode.hpp  AstType.hpp  LexWrapper.hpp  NBinaryOp.hpp  NBool.hpp  NDouble.hpp  NExpression.hpp  NFloat.hpp  NFunctionDeclaration.hpp  NInteger.hpp  NReturn.hpp  NStatement.hpp  NStructDeclaration.hpp  NVariableDeclaration.hpp  ParserWrapper.hpp  SymbolTable.hpp  Type.hpp  codegen.h  parser.hpp
old/: Makefile
old/DesignDyn/StepperCPU/: CMakeLists.txt
old/DesignDyn/femlib/: CMakeLists.txt  README.md  doxyfile
old/DesignDyn/femlib/include/: ElementHex.hpp  ElementMesh.hpp  Material.hpp  MatrixX.hpp  QuadPt.hpp  StepperGrad.hpp  StrainEne.hpp  Timer.hpp  World.hpp
old/DesignDyn/femlib/src/: ArrayUtil.cpp  EMeshStiffnessSparse.cpp  Element.cpp  ElementHex.cpp  Material.cpp  MaterialQuad.cpp  MatrixX.cpp  MeshMulti.cpp  Stepper.cpp  StrainEne.cpp  StrainEneNeo.cpp  femError.cpp
old/DesignDyn/include/pcgsolver/: CMakeLists.txt  test_pcg.cpp  util.h
old/DesignDyn/include/pcgsolver/debug/: Makefile  cmake_install.cmake  testPCG
old/DesignDyn/runLinux/: CMakeLists.txt  UnitTests.cpp
old/DesignDyn/vecmath/: CMakeLists.txt
old/DesignDyn/vecmath/include/: Vector2i.h  Vector3f.h
old/DesignDyn/vecmath/src/: Matrix3f.cpp  Vector2i.cpp  Vector3f.cpp
old/DesignDyn/viewer/: CMakeLists.txt
old/DesignDyn/viewer/include/: Camera.hpp
old/DesignDyn/viewer/src/: Render.cpp
old/DesignDyn/voxelizer/: CMakeLists.txt  main.cpp
old/DesignDyn/voxelizer/include/: Voxel.hpp  trigAABBIntersect.hpp
old/DesignDyn/voxelizer/include/vecmath/: Vector3f.h
old/DesignDyn/voxelizer/src/: Mesh.cpp  Voxel.cpp  trigAABBIntersect.cpp
old/DesignDyn/voxelizer/vecmath/: premake4.lua
old/grammar/: parser.y  tokens.l
old/include/: Ast.hpp  NBinaryOp.hpp  NBlock.hpp  NExpression.hpp  NFor.hpp  NFunctionCall.hpp  NIdentifier.hpp  NInteger.hpp  NStructDeclaration.hpp  TextRange.hpp
old/src/: AstType.cpp  NBinaryOp.cpp  NExpression.cpp  NFor.cpp  NFunctionCall.cpp  NStatement.cpp  NVariableDeclaration.cpp  ParserWrapper.cpp  SymbolTable.cpp
old/src/primitive/: NBool.cpp  NDouble.cpp  NFloat.cpp  NInteger.cpp
old/test/: test.txt  test1.txt
proposal/: dynamic.tex  introduction.tex  proposal.bib  proposal.tex  related.tex  static.tex  staticOpt.tex  timeline.tex
src/: AstNode.cpp  AstType.cpp  LexWrapper.cpp  NBinaryOp.cpp  NBlock.cpp  NExpression.cpp  NFor.cpp  NFunctionCall.cpp  NFunctionDeclaration.cpp  NReturn.cpp  NStatement.cpp  NStructDeclaration.cpp  NVariableDeclaration.cpp  ParserWrapper.cpp  SymbolTable.cpp  Type.cpp  codegen.cpp  main.cpp  parser.cpp  tokens.cpp
src/primitive/: NBool.cpp  NDouble.cpp  NFloat.cpp  NInteger.cpp
test/: basic.txt  cmpTest.txt  for.txt  iftest.txt  test.txt
thesis/: abstract.tex  acknowledge.tex  appa.tex  appb.tex  biblio.tex  chap1.tex  chap2.aux  chap2.tex  conclusion.tex  cover.tex  ddfem.tex  discovery.tex  dyn.tex  main.bbl  main.bib  main.blg  main.tex  mirrorCubicStructure.m  struct_template.m  topoopt.tex  twoscale.tex
thesis/figs/: fig.pptx  fig1.pptx  sampleCube.pptx  typical.ai
top_matlab/: display_2D.m  display_3D.m  homogenize.m  mirrorSeqUD.m  mmasub.m  saveArr4d.m  top.m  top3d_mma.m  top88.m  top88_mod.m  topX.m  topX_mma.m
